[gd_scene load_steps=7 format=3 uid="uid://4cyajmpvya0t"]

[ext_resource type="Theme" uid="uid://5lacq73qg3pw" path="res://Resources/theme.tres" id="1_yaf6g"]
[ext_resource type="Script" uid="uid://sosl863fhq74" path="res://Scripts/dialogue_box.gd" id="2_l304u"]
[ext_resource type="Script" uid="uid://g32um0mltv5d" path="res://addons/dialogue_manager/dialogue_label.gd" id="2_qkucv"]
[ext_resource type="Texture2D" uid="uid://b6stlfhtnvf46" path="res://Assets/Portraits/nathan.svg" id="3_sx16g"]
[ext_resource type="Texture2D" uid="uid://cglpxh712akfg" path="res://Assets/Portraits/coco.svg" id="5_dhpuu"]

[sub_resource type="LabelSettings" id="LabelSettings_cs1qt"]
font_color = Color(1, 0.512959, 0, 1)

[node name="DialogueBox" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2
size_flags_horizontal = 3
mouse_filter = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10
script = ExtResource("2_l304u")

[node name="Dialogue" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme = ExtResource("1_yaf6g")

[node name="LeftCharacter" type="TextureRect" parent="Dialogue"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_sx16g")

[node name="Spacer" type="Control" parent="Dialogue"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="Dialogue"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Dialogue/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Dialogue/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterName" type="Label" parent="Dialogue/Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Character"

[node name="DialogueLabel" type="RichTextLabel" parent="Dialogue/Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
bbcode_enabled = true
text = "Dialogue"
fit_content = true
script = ExtResource("2_qkucv")
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex")

[node name="Spacer2" type="Control" parent="Dialogue"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
mouse_filter = 2

[node name="RightCharacter" type="TextureRect" parent="Dialogue"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_dhpuu")

[node name="ActionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_cs1qt")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="finished_typing" from="Dialogue/Background/MarginContainer/VBoxContainer/DialogueLabel" to="Dialogue" method="_on_dialogue_label_finished_typing"]
